--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,7 +6,8 @@
   "semi": true,
   "singleQuote": true,
   "tabWidth": 4,
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "useTabs": false,
-  "vueIndentScriptAndStyle": false
+  "vueIndentScriptAndStyle": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
