--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxt/kit": "^3.13.1",
+    "@nuxt/schema": "^3.13.1",
+    "@nuxt/ui": "^2.18.4",
+    "@nuxtjs/i18n": "^8.5.3",
     "nuxt": "^3.12.1",
     "vue": "^3.4.27",
     "vue-router": "^4.3.3"
@@ -21,7 +25,8 @@
     "@nuxt/eslint": "^0.3.13",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "eslint": "^9.4.0",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
