--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
-  },
-  "dependencies": {
-    "@nuxt/kit": "^3.13.1",
-    "@nuxt/schema": "^3.13.1",
-    "@nuxt/ui": "^2.18.4",
-    "@nuxtjs/i18n": "^8.5.3",
-    "nuxt": "^3.12.1",
-    "vue": "^3.4.27",
-    "vue-router": "^4.3.3"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
-  "devDependencies": {
-    "@nuxt/eslint": "^0.3.13",
-    "@nuxtjs/tailwindcss": "^6.12.0",
-    "eslint": "^9.4.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
+    },
+    "dependencies": {
+        "@nuxt/kit": "^3.17.3",
+        "@nuxt/schema": "^3.17.3",
+        "@nuxt/ui": "^3.1.1",
+        "@nuxtjs/i18n": "^9.5.4",
+        "@tailwindcss/vite": "^4.1.6",
+        "floating-vue": "^5.2.2",
+        "nuxt": "^3.17.3",
+        "tailwindcss": "^4.1.6",
+        "vue": "^3.5.13",
+        "vue-router": "^4.5.1"
+    },
+    "devDependencies": {
+        "@nuxt/eslint": "^1.3.1",
+        "@nuxtjs/tailwindcss": "^6.14.0",
+        "eslint": "^9.26.0",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "typescript": "^5.8.3"
+    }
 }
